# scoring-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  locustfile.py  pyproject.toml
app/: __init__.py  api.py  main.py  schemas.py
app/core/: config.py
tests/: conftest.py  test_api.py  test_scoring_logic.py
